# backend/openapi.yaml
@@ -23,7 +23,7 @@ paths:
           content:
             "*/*":
               schema:
-                "$ref": "#/components/schemas/PageVoteSummaryDto"
+                "$ref": "#/components/schemas/PageResponseVoteSummaryDto"
     post:
       tags:
         - vote-controller
@@ -567,65 +567,31 @@ components:
           type: array
           items:
             type: string
-    PageVoteSummaryDto:
+    PageResponseVoteSummaryDto:
       type: object
       properties:
-        totalPages:
-          type: integer
-          format: int32
+        content:
+          type: array
+          items:
+            "$ref": "#/components/schemas/VoteSummaryDto"
         totalElements:
           type: integer
           format: int64
-        pageable:
-          "$ref": "#/components/schemas/PageableObject"
-        first:
-          type: boolean
-        last:
-          type: boolean
-        numberOfElements:
+        totalPages:
+          type: integer
+          format: int32
+        number:
           type: integer
           format: int32
         size:
           type: integer
           format: int32
-        content:
-          type: array
-          items:
-            "$ref": "#/components/schemas/VoteSummaryDto"
-        number:
-          type: integer
-          format: int32
-        sort:
-          "$ref": "#/components/schemas/SortObject"
-        empty:
-          type: boolean
-    PageableObject:
-      type: object
-      properties:
-        paged:
-          type: boolean
-        pageNumber:
-          type: integer
-          format: int32
-        pageSize:
-          type: integer
-          format: int32
-        unpaged:
-          type: boolean
-        offset:
-          type: integer
-          format: int64
-        sort:
-          "$ref": "#/components/schemas/SortObject"
-    SortObject:
-      type: object
-      properties:
-        unsorted:
-          type: boolean
-        sorted:
-          type: boolean
-        empty:
-          type: boolean
+      required:
+        - content
+        - totalElements
+        - totalPages
+        - number
+        - size
     VoteSummaryDto:
       type: object
       properties:
